# evogen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: evoscriptConfig.cmake
cmd/: CMakeLists.txt  main.cpp
evogen/: Block.cpp  Block.h  BlockContainer.cpp  BlockContainer.h  BlockStates.cpp  BlockStates.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Generator.cpp  Generator.h  Image.cpp  Image.h  Structure.cpp  Structure.h  Task.cpp  Task.h  Turtle.cpp  Turtle.h  VanillaBlock.h  Vector.h  World.cpp  World.h
evoscript/: AST.cpp  AST.h  AbstractOperations.cpp  AbstractOperations.h  ArgumentList.h  CMakeLists.txt  CallStack.cpp  CallStack.h  EscapeSequences.h  EvalResult.h  ExecutionContext.cpp  ExecutionContext.h  GlobalObject.cpp  GlobalObject.h  Lexer.cpp  Lexer.h  NativeFunction.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Runtime.cpp  Runtime.h  ScopeObject.cpp  ScopeObject.h  SourceLocation.cpp  SourceLocation.h  StringId.cpp  StringId.h  Value.cpp  Value.h  main.cpp
evoscript/objects/: ASTFunction.cpp  ASTFunction.h  Array.cpp  Array.h  Class.cpp  Class.h  Exception.cpp  Exception.h  File.cpp  File.h  FileObject.cpp  FileObject.h  FileSystem.cpp  FileSystem.h  FsObject.cpp  FsObject.h  GlobalObject.cpp  GlobalObject.h  LocalObject.cpp  LocalObject.h  MapObject.cpp  MapObject.h  NativeFunction.h  Object.cpp  Object.h  ScopeObject.cpp  ScopeObject.h  String.cpp  String.h  StringObject.cpp  StringObject.h  SyntaxError.cpp  SyntaxError.h  SysObject.cpp  SysObject.h  System.cpp  System.h  Time.cpp  Time.h  TimeObject.cpp  (+1 more)
evoscript/objects_old/: Array.cpp  Array.h  FsObject.cpp  FsObject.h  StringObject.cpp
libevogen/: Block.cpp  Block.h  BlockContainer.cpp  BlockContainer.h  BlockStates.cpp  CMakeLists.txt  Chunk.cpp  Chunk.h  Generator.cpp  Generator.h  Image.cpp  Image.h  Structure.cpp  Structure.h  Task.cpp  Task.h  Turtle.cpp  Turtle.h  Vector.h  World.cpp  World.h
libevoscript/: AST.cpp  AST.h  AbstractOperations.cpp  AbstractOperations.h  CMakeLists.txt  CallStack.cpp  CallStack.h  ExecutionContext.cpp  ExecutionContext.h  Lexer.cpp  Lexer.h  NativeFunction.h  Parser.cpp  Parser.h  Runtime.cpp  Runtime.h  SourceLocation.cpp  SourceLocation.h  Value.cpp  Value.h  main.cpp
libevoscript/objects/: Exception.cpp  Exception.h  GlobalObject.cpp  GlobalObject.h  LocalObject.cpp  LocalObject.h  MapObject.cpp  MapObject.h  Object.cpp  Object.h  StringObject.cpp  StringObject.h  SysObject.cpp  SysObject.h
tests/: CMakeLists.txt
tests/script/: TestRunner.cpp  basic.cpp  run-all.sh  test-lib.evs
tests/script/examples/: bf.evs  primes  primes.cpp  primes.evs  primes.js  primes.py
tests/script/lang/: bf.evs  primes.evs
tests/script/lang/loops/: while.evs
tests/script/lang/scopes/: block.evs  global-variables.evs
tests/script/lang/statements/: switch-case.evs  try-catch.evs
tests/script/lexer/: repl.cpp
tests/script/parser/: basic.cpp
tests/script/runtime/: basic.cpp  runner.cpp
